--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "dotenv": "^16.4.7",
@@ -20,6 +21,8 @@
     "react-d3-tree": "^3.6.5",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-router": "^7.2.0",
+    "react-router-dom": "^7.2.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
