--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "colorthief": "^2.6.0",
     "dotenv": "^16.4.7",
     "marked": "^15.0.7",
     "openai": "^4.85.4",
